--- a/src/styles/cars/cars.scss
+++ b/src/styles/cars/cars.scss
@@ -2,8 +2,8 @@
 
 .cars {
   font-family: $nunito;
-  padding-top: 55px;
-  min-height: 100vh;
+  padding-top: 57px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -13,11 +13,11 @@
     width: 100%;
     height: calc(100vh - 55px);
     position: absolute;
-    z-index: 3;
+    z-index: 8;
     padding: 10px 20px;
     display: none;
     flex-direction: column;
-    background: $color-white;
+    background: $color-default-white;
     box-shadow: 0 0 10px -7px $color-black;
     box-sizing: border-box;
     overflow-y: auto;
@@ -29,6 +29,7 @@
       align-items: center;
       width: 100%;
       padding-bottom: 10px;
+      max-height: 30px;
       border-bottom: 1px solid $color-silver;
 
       &.sidebar-section:not(:last-child) {
@@ -163,6 +164,47 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      height: calc(100vh - 91px);
+
+      > .content {
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow-y: auto;
+        gap: 15px;
+
+        .card {
+          padding: 20px;
+          background: $color-default-white;
+          border-radius: $border-radius-small;
+          cursor: pointer;
+          box-sizing: border-box;
+          transition: $default-transition;
+          box-shadow: 0 0 10px -5px $color-silver;
+
+          header {
+
+            img {
+              width: 100%;
+              height: 180px;
+              object-fit: cover;
+              border-radius: $border-radius-small;
+            }
+
+            h3 {
+              font-weight: bold;
+              margin-block: 10px;
+              font-size: 1.2rem;
+              text-align: center;
+            }
+          }
+
+          footer {
+            display: flex;
+            flex-direction: column;
+          }
+        }
+      }
     }
   }
 
@@ -170,9 +212,11 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    padding: 10px;
-    background: $color-silver;
+    padding: 6px 10px;
+    background: $color-default-white;
     box-sizing: border-box;
+    box-shadow: 0 0 10px -5px $color-black;
+    z-index: 5;
 
     .filters-item {
       display: flex;
@@ -186,7 +230,7 @@
       }
 
       &.sorting-container:not(:last-child) {
-        max-width: calc(100% - 48px);
+        max-width: calc(100% - 43px);
         width: 100%;
         margin-right: 0;
 
@@ -201,13 +245,13 @@
           background: $color-default-white;
           padding: 10px;
           border-radius: $border-radius-small;
-          border: 1px solid $color-silver;
           cursor: pointer;
+          border: 1px solid $color-silver;
         }
       }
 
       &:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 5px;
       }
 
       label {
@@ -232,7 +276,7 @@
     }
   }
 
-  footer {
+  .footer {
     position: relative;
     margin-top: 0;
     bottom: 0;
@@ -256,11 +300,31 @@
         width: 100%;
       }
     }
+
+    .cars-container {
+
+      .content-container {
+
+        > .content {
+          grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        }
+      }
+    }
   }
 }
 
 @media screen and (min-width: $tablet-screen) {
   .cars {
+
+    .cars-container {
+
+      .content-container {
+
+        > .content {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
 
     .filters {
       flex-wrap: nowrap;
@@ -269,7 +333,7 @@
         margin-block: 0;
 
         &.sorting-container:not(:last-child) {
-          margin-right: 10px;
+          margin-right: 5px;
           width: auto;
         }
       }
@@ -290,6 +354,29 @@
   }
 
   .cars {
+    padding-top: 55px;
+
+    .cars-container {
+
+      .content-container {
+        width: calc(100% - 320px);
+
+        > .content {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+
+      &.full-screen {
+
+        > .content-container{
+          width: 100%;
+
+          > .content {
+            grid-template-columns: repeat(3, 1fr);
+          }
+        }
+      }
+    }
 
     aside {
       display: flex;
@@ -297,23 +384,35 @@
       width: 320px;
       position: relative;
       flex-wrap: nowrap;
-      height: calc(100vh - 111px);
+      height: calc(100vh - 91px);
 
       .sidebar-section.sidebar-header {
         display: none;
       }
     }
+  }
+}
+
+@media screen and (min-width: $laptop-large-screen) {
+
+  .cars {
 
     .cars-container {
 
       .content-container {
-        width: calc(100% - 320px);
+
+        > .content {
+          grid-template-columns: repeat(4, 1fr);
+        }
       }
 
       &.full-screen {
 
-        > .content-container{
-          width: 100%;
+        > .content-container {
+
+          > .content {
+            grid-template-columns: repeat(5, 1fr);
+          }
         }
       }
     }
