Fixed bugs. Added cars cards to the cars page

--- a/src/styles/application/variables.scss
+++ b/src/styles/application/variables.scss
@@ -11,6 +11,10 @@ $color-white-blue: #D6E0F0;
 $color-light-red: #FF6464;
 $color-dark-red: #CE1212;
 $color-light-gray: #706C61;
+$color-green: #1FAB89;
+$color-blue: #0F4C75;
+$color-orange: #EA907A;
+$color-brown: #865439;
 
 // fonts
 $nunito: 'Nunito', sans-serif;
