--- a/src/styles/cars/cars.scss
+++ b/src/styles/cars/cars.scss
@@ -11,14 +11,14 @@
 
   aside {
     width: 100%;
-    height: calc(100vh - 55px);
+    height: calc(100vh - 57px);
     position: absolute;
     z-index: 8;
     padding: 10px 20px;
     display: none;
     flex-direction: column;
     background: $color-default-white;
-    box-shadow: 0 0 10px -7px $color-black;
+    box-shadow: -5px 0 10px -7px $color-black;
     box-sizing: border-box;
     overflow-y: auto;
     transition: $default-transition;
@@ -155,6 +155,7 @@
 
   .cars-container {
     display: flex;
+    position: relative;
 
     aside {
       display: flex;
@@ -164,44 +165,91 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      height: calc(100vh - 91px);
+      height: calc(100vh - 93px);
 
-      > .content {
-        padding: 10px;
-        display: grid;
-        grid-template-columns: 1fr;
+
+      .content-wrapper {
+        height: 100%;
         overflow-y: auto;
-        gap: 15px;
 
-        .card {
-          padding: 20px;
-          background: $color-default-white;
-          border-radius: $border-radius-small;
-          cursor: pointer;
-          box-sizing: border-box;
-          transition: $default-transition;
-          box-shadow: 0 0 10px -5px $color-silver;
+        > .content {
+          padding: 10px;
+          display: grid;
+          grid-template-columns: 1fr;
+          gap: 15px;
 
-          header {
+          .card {
+            padding: 20px;
+            background: $color-default-white;
+            border-radius: $border-radius-small;
+            box-sizing: border-box;
+            transition: $default-transition;
+            box-shadow: 0 0 10px -5px $color-silver;
 
-            img {
-              width: 100%;
-              height: 180px;
-              object-fit: cover;
-              border-radius: $border-radius-small;
+            header {
+              margin-bottom: 25px;
+
+              img {
+                width: 100%;
+                height: 180px;
+                object-fit: cover;
+                border-radius: $border-radius-small;
+              }
+
+              h3 {
+                font-weight: bold;
+                margin-block: 15px;
+                font-size: 1.2rem;
+              }
             }
 
-            h3 {
-              font-weight: bold;
-              margin-block: 10px;
-              font-size: 1.2rem;
-              text-align: center;
-            }
-          }
+            .card-content {
+              display: grid;
+              grid-template-columns: repeat(2, 1fr);
+              row-gap: 15px;
+              margin-bottom: 20px;
 
-          footer {
-            display: flex;
-            flex-direction: column;
+              .content-item {
+                display: inline-flex;
+                width: 100%;
+                font-size: 1rem;
+
+                svg {
+                  padding-right: 5px;
+                  width: 20px;
+                  margin-block: -2px 2px;
+                }
+
+                span {
+                  font-size: 1.2rem;
+                  display: inline-flex;
+                  align-items: center;
+                  margin-top: 10px;
+                  font-weight: bold;
+                }
+
+                &.price-per-day span {
+                  color: $color-green;
+                }
+
+                &.number-of-seats span {
+                  color: $color-blue;
+                }
+
+                &.mileage span {
+                  color: $color-orange;
+                }
+
+                &.transmission span {
+                  color: $color-brown;
+                }
+              }
+            }
+
+            footer {
+              display: flex;
+              flex-direction: column;
+            }
           }
         }
       }
@@ -305,7 +353,7 @@
 
       .content-container {
 
-        > .content {
+        .content-wrapper > .content {
           grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         }
       }
@@ -320,7 +368,7 @@
 
       .content-container {
 
-        > .content {
+        .content-wrapper > .content {
           grid-template-columns: repeat(2, 1fr);
         }
       }
@@ -360,8 +408,9 @@
 
       .content-container {
         width: calc(100% - 320px);
+        height: calc(100vh - 91px);
 
-        > .content {
+        .content-wrapper > .content {
           grid-template-columns: repeat(2, 1fr);
         }
       }
@@ -371,7 +420,7 @@
         > .content-container{
           width: 100%;
 
-          > .content {
+          .content-wrapper > .content {
             grid-template-columns: repeat(3, 1fr);
           }
         }
@@ -401,16 +450,16 @@
 
       .content-container {
 
-        > .content {
+        .content-wrapper > .content {
           grid-template-columns: repeat(4, 1fr);
         }
       }
 
       &.full-screen {
 
-        > .content-container {
+        .content-container {
 
-          > .content {
+          .content-wrapper > .content {
             grid-template-columns: repeat(5, 1fr);
           }
         }
