All filters are ready to be used

--- a/src/styles/cars/cars.css
+++ b/src/styles/cars/cars.css
@@ -17,7 +17,7 @@
     background: #FFFFFF;
     box-shadow: -5px 0 10px -7px #171717;
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow-y: scroll;
     transition: 0.3s ease; }
     .cars aside .sidebar-header {
       display: flex;
