--- a/src/styles/cars/cars.scss
+++ b/src/styles/cars/cars.scss
@@ -20,7 +20,7 @@
     background: $color-default-white;
     box-shadow: -5px 0 10px -7px $color-black;
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow-y: scroll;
     transition: $default-transition;
 
     .sidebar-header {
