--- a/src/styles/application/variables.scss
+++ b/src/styles/application/variables.scss
@@ -15,6 +15,7 @@ $color-green: #1FAB89;
 $color-blue: #0F4C75;
 $color-orange: #EA907A;
 $color-brown: #865439;
+$color-violet: #9C254D;
 
 // fonts
 $nunito: 'Nunito', sans-serif;
