--- a/src/styles/application/app.css
+++ b/src/styles/application/app.css
@@ -232,6 +232,11 @@ body {
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 20px; }
+.form-container .error-input {
+  border: 1px solid #DA0037 !important; }
+.form-container .error {
+  margin-top: 5px;
+  color: #DA0037; }
 .form-container form .form-group {
   display: flex; }
   .form-container form .form-group .form-item {
@@ -327,6 +332,20 @@ body {
       .selector .option-list > div:hover {
         background: #DDDDDD;
         color: #DA0037; }
+
+.loading-page {
+  margin: auto auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box; }
+  .loading-page img {
+    min-width: 32px;
+    max-width: 64px;
+    width: 25%; }
 
 @media screen and (min-width: 1024px) {
   .application .navigation-container .link-group .navigation {
