--- a/src/styles/cars/cars.css
+++ b/src/styles/cars/cars.css
@@ -153,7 +153,7 @@
                 .cars .cars-container .content-container .content-wrapper > .content .card .card-content .content-item.mileage span {
                   color: #EA907A; }
                 .cars .cars-container .content-container .content-wrapper > .content .card .card-content .content-item.transmission span {
-                  color: #865439; }
+                  color: #9C254D; }
             .cars .cars-container .content-container .content-wrapper > .content .card footer {
               display: flex;
               flex-direction: column; }
@@ -207,6 +207,134 @@
     margin-top: 0;
     bottom: 0; }
 
+.car-details {
+  padding-top: 57px;
+  font-family: "Nunito", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  min-height: calc(100vh - 57px); }
+  .car-details .content {
+    display: flex;
+    flex-wrap: wrap; }
+    .car-details .content .car-info {
+      max-width: 100%;
+      min-width: 320px;
+      padding: 20px;
+      background: #FFFFFF;
+      box-sizing: border-box;
+      transition: 0.3s ease;
+      position: relative;
+      width: 100%; }
+      .car-details .content .car-info .car-info-header {
+        margin-bottom: 25px; }
+        .car-details .content .car-info .car-info-header img {
+          width: 100%;
+          aspect-ratio: 2 / 1;
+          object-fit: cover;
+          border-radius: 3px; }
+        .car-details .content .car-info .car-info-header h3 {
+          font-weight: bold;
+          margin-block: 20px;
+          font-size: 1.5rem; }
+      .car-details .content .car-info .car-info-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 15px;
+        margin-bottom: 20px; }
+        .car-details .content .car-info .car-info-content .content-item {
+          display: inline-flex;
+          width: 100%;
+          font-size: 1rem; }
+          .car-details .content .car-info .car-info-content .content-item svg {
+            padding-right: 5px;
+            width: 20px;
+            margin-block: -2px 2px; }
+          .car-details .content .car-info .car-info-content .content-item span {
+            font-size: 1.2rem;
+            display: inline-flex;
+            align-items: center;
+            margin-top: 10px;
+            font-weight: bold; }
+          .car-details .content .car-info .car-info-content .content-item.price-per-day span {
+            color: #1FAB89; }
+          .car-details .content .car-info .car-info-content .content-item.number-of-seats span {
+            color: #0F4C75; }
+          .car-details .content .car-info .car-info-content .content-item.mileage span {
+            color: #EA907A; }
+          .car-details .content .car-info .car-info-content .content-item.transmission span {
+            color: #9C254D; }
+      .car-details .content .car-info footer {
+        display: flex;
+        flex-direction: column;
+        width: 100%; }
+        .car-details .content .car-info footer h3 {
+          font-weight: bold;
+          font-size: 1.2rem;
+          margin-block: 20px 10px; }
+        .car-details .content .car-info footer .feedbacks {
+          display: flex;
+          flex-direction: column; }
+          .car-details .content .car-info footer .feedbacks .car-feedback {
+            border: 1px solid #DDDDDD;
+            border-radius: 3px;
+            padding: 10px;
+            margin-bottom: 10px; }
+            .car-details .content .car-info footer .feedbacks .car-feedback .author {
+              display: flex;
+              margin-bottom: 10px;
+              font-size: 1.05rem; }
+              .car-details .content .car-info footer .feedbacks .car-feedback .author h4 {
+                font-weight: bold; }
+            .car-details .content .car-info footer .feedbacks .car-feedback .text {
+              font-size: 0.95rem; }
+        .car-details .content .car-info footer .reservations {
+          border: 1px solid #DDDDDD;
+          border-radius: 3px;
+          display: flex;
+          flex-direction: column; }
+          .car-details .content .car-info footer .reservations .car-reservation {
+            display: flex;
+            cursor: pointer; }
+            .car-details .content .car-info footer .reservations .car-reservation .no-reservations {
+              width: 100%;
+              border: none !important;
+              text-align: center; }
+            .car-details .content .car-info footer .reservations .car-reservation:first-child {
+              border-bottom: 1px solid #DDDDDD; }
+              .car-details .content .car-info footer .reservations .car-reservation:first-child > div {
+                font-size: 1rem; }
+            .car-details .content .car-info footer .reservations .car-reservation:not(:first-child):hover {
+              background: #DDDDDD !important; }
+            .car-details .content .car-info footer .reservations .car-reservation:not(:first-child):nth-child(2n + 1) {
+              background: #EDEDED; }
+            .car-details .content .car-info footer .reservations .car-reservation > div {
+              padding: 10px;
+              width: 50%;
+              font-size: 0.9rem; }
+              .car-details .content .car-info footer .reservations .car-reservation > div:first-child {
+                border-right: 1px solid #DDDDDD; }
+    .car-details .content .forms {
+      max-width: 100%;
+      width: 100%;
+      display: flex;
+      background: #FFFFFF;
+      box-sizing: border-box;
+      flex-direction: column; }
+      .car-details .content .forms .form-container {
+        padding: 20px; }
+        .car-details .content .forms .form-container:first-child {
+          padding-bottom: 0; }
+        .car-details .content .forms .form-container textarea {
+          min-height: 125px; }
+        .car-details .content .forms .form-container .form-group {
+          margin-bottom: 10px; }
+        .car-details .content .forms .form-container .submit-button {
+          margin-top: 0; }
+  .car-details .footer {
+    margin-top: 0; }
+
 @media screen and (min-width: 425px) {
   .cars aside {
     flex-direction: row;
@@ -236,6 +364,28 @@
   ::-webkit-scrollbar-thumb {
     background: #DA0037;
     border-radius: 3px; }
+
+  .car-details {
+    padding-top: 55px;
+    min-height: calc(100vh - 55px); }
+    .car-details .content {
+      flex-wrap: nowrap; }
+      .car-details .content .forms {
+        max-width: 40%;
+        overflow-y: auto;
+        height: calc(100vh - 91px); }
+      .car-details .content .car-info {
+        max-width: 60%;
+        height: calc(100vh - 91px);
+        overflow-y: auto; }
+        .car-details .content .car-info .car-info-header h3 {
+          margin-block: 30px;
+          font-size: 2rem; }
+        .car-details .content .car-info .car-info-content .content-item {
+          font-size: 1.2rem; }
+          .car-details .content .car-info .car-info-content .content-item span {
+            font-size: 1.5rem;
+            margin-block: 15px; }
 
   .cars {
     padding-top: 55px; }
